set(BUILD_PC_10_1 10_1)
set(SOURCE_FILES_PC_10_1 pc_10_1.cpp)
add_executable(${BUILD_PC_10_1} ${SOURCE_FILES_PC_10_1})

set(BUILD_PC_10_2 10_2)
set(SOURCE_FILES_PC_10_2 pc_10_2.cpp)
add_executable(${BUILD_PC_10_2} ${SOURCE_FILES_PC_10_2})

set(BUILD_PC_10_3 10_3)
set(SOURCE_FILES_PC_10_3 pc_10_3.cpp)
add_executable(${BUILD_PC_10_3} ${SOURCE_FILES_PC_10_3})