set(BUILD_PC_10_1 10_1)
set(SOURCE_FILES_PC_10_1 pc_10_1.cpp)
add_executable(${BUILD_PC_10_1} ${SOURCE_FILES_PC_10_1})

set(BUILD_PC_10_2 10_2)
set(SOURCE_FILES_PC_10_2 pc_10_2.cpp)
add_executable(${BUILD_PC_10_2} ${SOURCE_FILES_PC_10_2})

set(BUILD_PC_10_3 10_3)
set(SOURCE_FILES_PC_10_3 pc_10_3.cpp)
add_executable(${BUILD_PC_10_3} ${SOURCE_FILES_PC_10_3})

set(BUILD_PC_10_4 10_4)
set(SOURCE_FILES_PC_10_4 pc_10_4.cpp)
add_executable(${BUILD_PC_10_4} ${SOURCE_FILES_PC_10_4})

set(BUILD_trim trim)
set(SOURCE_FILES_trim trim.cpp)
add_executable(${BUILD_trim} ${SOURCE_FILES_trim})

set(BUILD_PC_10_9 10_9)
set(SOURCE_FILES_PC_10_9 pc_10_9.cpp)
add_executable(${BUILD_PC_10_9} ${SOURCE_FILES_PC_10_9})

set(BUILD_pig_latin pig_latin)
set(SOURCE_FILES_pig_latin pig_latin.cpp)
add_executable(${BUILD_pig_latin} ${SOURCE_FILES_pig_latin})

set(BUILD_vowels_detection vowels_detection)
set(SOURCE_FILES_vowels_detection vowels_detection.cpp)
add_executable(${BUILD_vowels_detection} ${SOURCE_FILES_vowels_detection})

set(BUILD_lab1 lab1)
set(SOURCE_FILES_lab1 lab1.cpp)
add_executable(${BUILD_lab1} ${SOURCE_FILES_lab1})

set(BUILD_PC_10_10 10_10)
set(SOURCE_FILES_PC_10_10 pc_10_10.cpp)
add_executable(${BUILD_PC_10_10} ${SOURCE_FILES_PC_10_10})

set(BUILD_PC_10_11 10_11)
set(SOURCE_FILES_PC_10_11 pc_10_11.cpp)
add_executable(${BUILD_PC_10_11} ${SOURCE_FILES_PC_10_11})