set(BUILD_4_37 4_37)
set(SOURCE_FILES_4_37 4_37.cpp)
add_executable(${BUILD_4_37} ${SOURCE_FILES_4_37})

set(BUILD_4_2 4_2)
set(SOURCE_FILES_4_2 4_2.cpp)
add_executable(${BUILD_4_2} ${SOURCE_FILES_4_2})

set(BUILD_CINEMA cinema)
set(SOURCE_FILES_CINEMA cinema.cpp)
add_executable(${BUILD_CINEMA} ${SOURCE_FILES_CINEMA})

set(BUILD_4_7 4_7)
set(SOURCE_FILES_4_7 4_7.cpp)
add_executable(${BUILD_4_7} ${SOURCE_FILES_4_7})

set(BUILD_4_10 4_10)
set(SOURCE_FILES_4_10 4_10.cpp)
add_executable(${BUILD_4_10} ${SOURCE_FILES_4_10})

set(BUILD_6_5 6_5)
set(SOURCE_FILES_6_5 6_5.cpp)
add_executable(${BUILD_6_5} ${SOURCE_FILES_6_5})

set(BUILD_4_3 4_3)
set(SOURCE_FILES_4_3 4_3.cpp)
add_executable(${BUILD_4_3} ${SOURCE_FILES_4_3})