cmake_minimum_required(VERSION 3.12)

set(BUILD_5_9 5_9)
set(SOURCE_FILES_5_9 5_9.cpp)
add_executable(${BUILD_5_9} ${SOURCE_FILES_5_9})

set(BUILD_5_10 5_10)
set(SOURCE_FILES_5_10 5_10.cpp)
add_executable(${BUILD_5_10} ${SOURCE_FILES_5_10})

set(BUILD_PC_5_11 PC_5_11)
set(SOURCE_FILES_PC_5_11 pc_5_11.cpp)
add_executable(${BUILD_PC_5_11} ${SOURCE_FILES_PC_5_11})

set(BUILD_PC_5_12 PC_5_12)
set(SOURCE_FILES_PC_5_12 pc_5_12.cpp)
add_executable(${BUILD_PC_5_12} ${SOURCE_FILES_PC_5_12})

set(BUILD_PC_5_5 PC_5_5)
set(SOURCE_FILES_PC_5_5 pc_5_5.cpp)
add_executable(${BUILD_PC_5_5} ${SOURCE_FILES_PC_5_5})

set(BUILD_SQRT SQRT)
set(SOURCE_FILES_SQRT sqrt.cpp)
add_executable(${BUILD_SQRT} ${SOURCE_FILES_SQRT})

set(BUILD_PC_5_4 PC_5_4)
set(SOURCE_FILES_PC_5_4 pc_5_4.cpp)
add_executable(${BUILD_PC_5_4} ${SOURCE_FILES_PC_5_4})

set(BUILD_PC_5_6 PC_5_6)
set(SOURCE_FILES_PC_5_6 pc_5_6.cpp)
add_executable(${BUILD_PC_5_6} ${SOURCE_FILES_PC_5_6})

set(BUILD_PC_5_7 PC_5_7)
set(SOURCE_FILES_PC_5_7 pc_5_7.cpp)
add_executable(${BUILD_PC_5_7} ${SOURCE_FILES_PC_5_7})

set(BUILD_CHATTING CHATTING)
set(SOURCE_FILES_CHATTING chatting.cpp)
add_executable(${BUILD_CHATTING} ${SOURCE_FILES_CHATTING})

set(BUILD_BANK_INTEREST BANK_INTEREST)
set(SOURCE_FILES_BANK_INTEREST bank_interest.cpp)
add_executable(${BUILD_BANK_INTEREST} ${SOURCE_FILES_BANK_INTEREST})

set(BUILD_PC_5_10 PC_5_10)
set(SOURCE_FILES_PC_5_10 pc_5_10.cpp)
add_executable(${BUILD_PC_5_10} ${SOURCE_FILES_PC_5_10})

set(BUILD_SQUARE SQUARE)
set(SOURCE_FILES_SQUARE square.cpp)
add_executable(${BUILD_SQUARE} ${SOURCE_FILES_SQUARE})