set(BUILD_6_4 6_4)
set(SOURCE_FILES_6_4 cp_6_4.cpp)
add_executable(${BUILD_6_4} ${SOURCE_FILES_6_4})

set(BUILD_6_6 6_6)
set(SOURCE_FILES_6_6 cp_6_6.cpp)
add_executable(${BUILD_6_6} ${SOURCE_FILES_6_6})

set(BUILD_6_10 6_10)
set(SOURCE_FILES_6_10 cp_6_10.cpp)
add_executable(${BUILD_6_10} ${SOURCE_FILES_6_10})

set(BUILD_6_1 6_1)
set(SOURCE_FILES_6_1 pc_6_1.cpp)
add_executable(${BUILD_6_1} ${SOURCE_FILES_6_1})

set(BUILD_6_2 6_2)
set(SOURCE_FILES_6_2 pc_6_2.cpp)
add_executable(${BUILD_6_2} ${SOURCE_FILES_6_2})

set(BUILD_6_5 6_5)
set(SOURCE_FILES_6_5 pc_6_5.cpp)
add_executable(${BUILD_6_5} ${SOURCE_FILES_6_5})

set(BUILD_6_9 6_9)
set(SOURCE_FILES_6_9 pc_6_9.cpp)
add_executable(${BUILD_6_9} ${SOURCE_FILES_6_9})