set(BUILD_7_2 7_2)
set(SOURCE_FILES_7_2 pc_7_2.cpp)
add_executable(${BUILD_7_2} ${SOURCE_FILES_7_2})

set(BUILD_7_3 7_3)
set(SOURCE_FILES_7_3 pc_7_3.cpp)
add_executable(${BUILD_7_3} ${SOURCE_FILES_7_3})

set(BUILD_LB L_B)
set(SOURCE_FILES_LB light_bulb.cpp)
add_executable(${BUILD_LB} ${SOURCE_FILES_LB})