set(BUILD_8_1 8_1)
set(SOURCE_FILES_8_1 pc_8_1.cpp)
add_executable(${BUILD_8_1} ${SOURCE_FILES_8_1})

set(BUILD_8_2 8_2)
set(SOURCE_FILES_8_2 pc_8_2.cpp)
add_executable(${BUILD_8_2} ${SOURCE_FILES_8_2})

set(BUILD_C_8_2 C_8_2)
set(SOURCE_FILES_C_8_2 case_8_2.cpp)
add_executable(${BUILD_C_8_2} ${SOURCE_FILES_C_8_2})