set(BUILD_CP_9_7 CP_9_7)
set(SOURCE_FILES_CP_9_7 cp_9_7.cpp)
add_executable(${BUILD_CP_9_7} ${SOURCE_FILES_CP_9_7})

set(BUILD_CP_9_8 CP_9_8)
set(SOURCE_FILES_CP_9_8 cp_9_8.cpp)
add_executable(${BUILD_CP_9_8} ${SOURCE_FILES_CP_9_8})

set(BUILD_ARRCMP ARRCMP)
set(SOURCE_FILES_ARRCMP arr_cmp.cpp)
add_executable(${BUILD_ARRCMP} ${SOURCE_FILES_ARRCMP})

set(BUILD_ADDMIN ADDMIN)
set(SOURCE_FILES_ADDMIN add_minute.cpp)
add_executable(${BUILD_ADDMIN} ${SOURCE_FILES_ADDMIN})

set(BUILD_PC_9_1 9_1)
set(SOURCE_FILES_PC_9_1 pc_9_1_2_5.cpp)
add_executable(${BUILD_PC_9_1} ${SOURCE_FILES_PC_9_1})

set(BUILD_PC_9_8 9_8)
set(SOURCE_FILES_PC_9_8 pc_9_8_9_14.cpp)
add_executable(${BUILD_PC_9_8} ${SOURCE_FILES_PC_9_8})

set(BUILD_MAXMIN MAXMIN)
set(SOURCE_FILES_MAXMIN max_min.cpp)
add_executable(${BUILD_MAXMIN} ${SOURCE_FILES_MAXMIN})